--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -90,7 +90,7 @@ $('document').ready(function(){
 <!--SECTION-->
 	<h2>Information</h2>
 	<h3>Interlibrary Loan request details</h3>
-	<table>
+	<table id="fill-table">
 	  <tr><td>Requesting user</td><td>: <TMPL_VAR NAME="username"></td></tr>
 	  <tr><td>Title</td><td>: <TMPL_VAR name="title"></td></tr>
 	  <tr><td>Author</td><td>: <TMPL_VAR name="author"></td></tr>
