--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -203,6 +203,13 @@
     margin-bottom: 1em;
 }
 
+#library-info {
+  margin: 1em;
+  background-color: #fff;
+  border: #f3f3f3 1px solid;
+  font-style: bold;
+  font-size: 1.2em;
+}
 
 /***---End of new library client side CSS--**/
 
