separate css file, scrollable chat channels, bugfix in chat server, handle patron-reconnect-before-lib-closed-channel issue

--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -1,5 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
+<link type="text/css" rel="stylesheet" href="/css/fILL-chat.1.0.css">
+
 <script type="text/javascript">
     set_primary_tab("menu_contact");
 </script>
