--- a/templates/patrons/chat.tmpl
+++ b/templates/patrons/chat.tmpl
@@ -1,8 +1,9 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_patrons.tmpl">
 
+<script type="text/javascript" src="/js/jquery.slimscroll.min.js"></script>
 <script type="text/javascript" src="/js/fILL-chat-1.0.js"></script>
-
+<link type="text/css" rel="stylesheet" href="/css/fILL-chat.1.0.css">
 
 <script type="text/javascript">
 function set_primary_tab(tab_id) {
@@ -46,6 +47,10 @@ $('document').ready(function(){
         $("#input-syschan").focus();
     });
    
+    $("#messages-syschan").slimScroll({
+        height: '200px'
+    });
+
 }); // end document ready
 
 </script>
@@ -61,7 +66,8 @@ $('document').ready(function(){
     <div id="channels" class="channels">
 
 <!--      <div id="syschan" class="single-channel" style="display:none; border:1px solid; float: left; width:300px; background-color:yellow;"> -->
-      <div id="syschan" class="single-channel" style="display:none">
+<!--      <div id="syschan" class="single-channel" style="display:none"> -->
+      <div id="syschan" class="single-channel">
 	<div class="channel-title"><h2>syschan</h2></div>
 	<div class="messages" id="messages-syschan"></div>
 	<div class="chat-entry" id="chat-entry-syschan">
