--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -41,20 +41,20 @@
 	
 	  <TMPL_IF NAME="editSlipsWithBarcodes">
 	    <input TYPE="radio" NAME="slips_with_barcodes" VALUE='t' CHECKED>Yes
-	    <input TYPE="radio" NAME="slips_with_barcodes" VALUE='f'>No<br />
+	    <input TYPE="radio" NAME="slips_with_barcodes" VALUE='f'>No
 	  <TMPL_ELSE>
-	    <input TYPE="radio" NAME="slips_with_barcodes" VALUE='t'>Yes<br/>
-	    <input TYPE="radio" NAME="slips_with_barcodes" VALUE='f' CHECKED>No<br/>
+	    <input TYPE="radio" NAME="slips_with_barcodes" VALUE='t'>Yes
+	    <input TYPE="radio" NAME="slips_with_barcodes" VALUE='f' CHECKED>No
 	  </TMPL_IF>
 	
 	<h3>Are you a headquarters library that centrally manages ILL for your branches?</h3>  
 	
 	  <TMPL_IF NAME="editCentralizedILL">
 	    <input TYPE="radio" NAME="centralized_ill" VALUE='t' CHECKED>Yes
-	    <input TYPE="radio" NAME="centralized_ill" VALUE='f'>No<br />
+	    <input TYPE="radio" NAME="centralized_ill" VALUE='f'>No
 	  <TMPL_ELSE>
-	    <input TYPE="radio" NAME="centralized_ill" VALUE='t'>Yes<br/>
-	    <input TYPE="radio" NAME="centralized_ill" VALUE='f' CHECKED>No<br/>
+	    <input TYPE="radio" NAME="centralized_ill" VALUE='t'>Yes
+	    <input TYPE="radio" NAME="centralized_ill" VALUE='f' CHECKED>No
 	  </TMPL_IF>
 
 </div><!--div id instrucitons 2-->
