--- a/templates/submenu_patrons.tmpl
+++ b/templates/submenu_patrons.tmpl
@@ -4,13 +4,13 @@
 <div id="csssubmenu">
   <ul>
     <li id="menu_patrons_chat">
-      <a href=/cgi-bin/patrons.cgi?rm=chat_form>
+      <a href="/cgi-bin/patrons.cgi?rm=chat_form" target="_blank">
       Chat
       </a>
     </li>
 
     <li id="menu_patrons_info">
-      <a href=/cgi-bin/patrons.cgi?rm=patrons_form>
+      <a href="/cgi-bin/patrons.cgi?rm=patrons_form">
       Patron list
       </a>
     </li>
