--- a/htdocs/css/fILL-chat.1.0.css
+++ b/htdocs/css/fILL-chat.1.0.css
@@ -18,6 +18,7 @@
     width:300px;
     display:none;
     background-color: #D7D7C4;
+    font-size: 1em;
 }
 
 .messages {
@@ -41,4 +42,7 @@ input.chat-input {
     background-color: #fff;
     border:solid 1px #505050;
     border: 2px #c3c3c3 solid;
+}
+
+.user_name, .user_message {
 }
